# neural_network

./: .gitignore  Makefile  inference.py  main.py  pyproject.toml  ruff.toml
src/: cli.py
src/data/: dataset.py  houses.csv
src/nn/: activation.py  activations.py  dataloader.py  factory.py  layer.py  linear.py  loss.py  losses.py  network.py  trainer.py
tests/: test_dataloader.py  test_dataset.py  test_linear.py  test_math.py  test_network.py
